@@ -266,6 +266,7 @@ CGUIControl* CGUIControlFactory::Create(DWORD dwParentId, const TiXmlNode* pCont
   CStdString strImage, strImageFocus;
   int iTextureWidth = 80;
   bool bHasPath = false;
+  int iAngle = 0;
   vector<CStdString> clickActions;
   CStdString focusAction = "";
   CStdString strTitle = "";
@@ -917,7 +918,7 @@ CGUIControl* CGUIControlFactory::Create(DWORD dwParentId, const TiXmlNode* pCont
   {
     CGUILabelControl* pControl = new CGUILabelControl(
       dwParentId, dwID, iPosX, iPosY, dwWidth, dwHeight,
-      strLabel, labelInfo, bHasPath);
+      strLabel, labelInfo, bHasPath, iAngle);
 
     pControl->SetColourDiffuse(dwColorDiffuse);
     pControl->SetVisibleCondition(iVisibleCondition, allowHiddenFocus);
